--- a/branches/Sindicato/Sindicato.WebSite/Content/extjs42.css
+++ b/branches/Sindicato/Sindicato.WebSite/Content/extjs42.css
@@ -511,6 +511,15 @@
     background-color: #FBE5D5 !important;
     color: #000000; /*font-weight: bold;*/
 }
+
+.OTAnulada .x-grid-cell
+{
+    background-color: #FF4645 !important;
+    color: #000000; /*font-weight: bold;*/
+}
+
+
+
 .OTEn_Ejec .x-grid-cell
 {
     background-color: #DEEBF6 !important;
